[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-doppler"
version = "0.2.0"
description = "Doppler Secrets Manager plugin for Hermes Agent — per-profile secret isolation for multi-profile gateway deployments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "inLeague LLC", email = "sam@inleague.org"},
]
keywords = ["hermes", "hermes-agent", "doppler", "secrets", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/inLeague/hermes-doppler"
Repository = "https://github.com/inLeague/hermes-doppler"
Issues = "https://github.com/inLeague/hermes-doppler/issues"

[project.entry-points."hermes.secret_sources"]
doppler = "hermes_doppler:DopplerSource"

[tool.setuptools.packages.find]
include = ["hermes_doppler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
